# CodingExperiments

./: .gitignore  README.md
C++/: .gitignore  cxx.mk  general.mk  process-args.mk
C++/FromMathsToGenProg/: CMakeLists.txt
C++/FromMathsToGenProg/FromMathsToGenProg/: CMakeLists.txt  FromMathsToGenProg.cpp  FromMathsToGenProg.h
C++/FromMathsToGenProg/FromMathsToGenProg.xcodeproj/: project.pbxproj
C++/FromMathsToGenProg/FromMathsToGenProg.xcodeproj/xcshareddata/xcschemes/: FromMathsToGenProg.xcscheme  multiply0.xcscheme
C++/Strings/Strings/: CMakeLists.txt  Funcs.cpp  Funcs.h  Program.cpp  Strings.cpp  Strings.h  Strings.vcxproj  Strings.vcxproj.filters
C++/Strings/Strings/Debug/: CL.read.1.tlog  CL.write.1.tlog  Strings.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
C-Sharp/: Any and Foreach.linq  Array Covariance.linq  CountPropVsMethod.linq  DividingInts.linq  Enum Equality.linq  FloatAndDoubleEquality.linq  ForEach vs Select.linq  GroupByAnonymousTypes.linq  InLineVsFunction.linq  IterateDictionaryKeys.linq  Linq Counting.linq  MultiAssignOnSingleLine.linq  MultiplicationHigherOrderFunctions.linq  NullableChars.linq  PathCombineSlashes.linq  PredicateInEnumerableWhere.linq  ReadonlyFieldsSetToNull.linq  ScalarProduct.linq  SmallestPowerOf2.linq  String Trimming.linq  StringArrayToFormat.linq  StringConcatVsStringBuilder.linq  StringToLong.linq  SwitchWithoutBreaks.linq
F-Sharp/: DU Matching.linq  FormattingArrays.fsx
Go/: .gitignore  cbrt.go  daysOld.go  dup-with-names.go  echo.go  env.go  fetch.go  http.go  lissajous.go  multiples.go  newton.csv  newton.go  pic.go  print-bytes.go  sha256diff.go  stop-watch.go  time.go  use-averages.go  wordCount.go
Haskell/: .gitignore  WC.hs  baby.hs  clean.sh  helloWorld.hs  myDrop.hs  mySum.hs  penultimate.hs  sumMultiples357.hs
JavaScript/: .gitignore
Julia/: print_long_words.jl  words_matching_pred.jl
OCaml/: .gitignore  data.ml  data.mli  errors.ml  fact.ml  fib.ml  hello.ml  imperative.ml  lists.ml  main.ml  multiply.ml  multiply.mli  sum.ml  types.ml
OCaml/data/: data.opam  dune-project
OCaml/data/lib/: data.ml  dune
OCaml/data/test/: dune
Perl/: array-of-hashes.pl  arrays.pl  eol-to-unix.pl  file-md5-sum-grouper.pl  films.yml  fruits.yml  grep.pl  hash-args-to-subs.pl  hash-of-arrays.pl  make-circle.pl  my-dig.pl  read-films.pl  reverser.pl  (+3 more)
(+2334 files in other folders)
