# CMakeList.txt : CMake project for FromMathsToGenProg, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 4.1)

# Add source to this project's executable.
add_executable (FromMathsToGenProg "FromMathsToGenProg.cpp" "FromMathsToGenProg.h")

# TODO: Add tests and install targets if needed.
